# raggen

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.build.yml  docker-compose.embed.yml  docker-compose.web.yml  docker-compose.yml  set-version.sh
raggen-embed/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
raggen-embed/src/: __init__.py  main.py  run.py
raggen-embed/src/api/: documents.py  embeddings.py  models.py
raggen-embed/src/config/: settings.py
raggen-embed/src/container/: __init__.py  application.py  request.py  setup.py
raggen-embed/src/core/: embeddings.py  paragraph_service.py  text_processing.py
raggen-embed/src/utils/: logging.py
raggen-embed/tests/: conftest.py  conftest_di.py  test_api.py  test_api_documents.py  test_api_documents_persistence.py  test_api_documents_processing.py  test_api_documents_strategies.py  test_api_embeddings.py  test_app.py  test_di_store_faiss.py  test_di_store_persistent.py  test_embeddings.py  test_embeddings_service.py  test_faiss_store_singleton.py  test_paragraph_processing.py  test_paragraph_service.py  test_persistent_store.py  test_store_faiss.py  test_vector_store.py  test_vector_store_faiss.py  test_vector_store_persistent.py  test_vector_store_service.py
raggen-embed/tests/api/: test_api_documents.py  test_api_documents_persistence.py
raggen-embed/tests/di/: conftest.py  test_di_document_processing.py  test_di_embeddings_service.py  test_di_store_faiss.py  test_di_store_persistent.py  test_di_text_splitter.py
(+160 files in other folders)
